--- a/PointOfSale/PointOfSale.csproj
+++ b/PointOfSale/PointOfSale.csproj
@@ -4,6 +4,8 @@
     <OutputType>WinExe</OutputType>
     <TargetFramework>netcoreapp3.1</TargetFramework>
     <UseWPF>true</UseWPF>
+    <RootNamespace>CowboyCafe.PointIOfSale</RootNamespace>
+    <AssemblyName>CowboyCafe.PointOfSale</AssemblyName>
   </PropertyGroup>
 
   <ItemGroup>
