--- a/PointOfSale/PointOfSale.csproj
+++ b/PointOfSale/PointOfSale.csproj
@@ -12,4 +12,10 @@
     <ProjectReference Include="..\Data\Data.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Reference Include="CashRegister">
+      <HintPath>..\..\..\source\repos\mvvm-data-binding-imaginrywalrus\MVVMDataBinding\CashRegister.dll</HintPath>
+    </Reference>
+  </ItemGroup>
+
 </Project>
